[package]
name = "samurai"
version = "0.1.3"
authors = ["solanav"]
edition = "2018"
readme = "README.md"
keywords = ["p2p", "samurai", "kademlia"]
license-file = "LICENSE"
repository = "https://github.com/solanav/samurai"
description = """
Very early stage user-space P2P network protocol.
"""

[dependencies]
rand = "0.7.3"
igd = "0.9.1"
get_if_addrs = "0.5.3"

[lib]
test = true
