[package]
name = "samurai"
version = "0.1.4"
authors = ["solanav"]
edition = "2018"
readme = "README.md"
keywords = ["p2p", "samurai", "kademlia"]
license-file = "LICENSE"
repository = "https://github.com/solanav/samurai"
description = """
Very early stage user-space P2P network protocol.
"""
exclude = [
    "mininet/",
    "doc/*",
]

[dependencies]
rand = "0.7.3" # For non-crypto random functions
igd = "0.9.1" # UPnP / Nat traversal utils
get_if_addrs = "0.5.3" # For getting local address
serde = { version = "1.0", features = ["derive"] } # Saving and loading peer lists from files
serde_json = "1.0" # Saving and loading peer lists from files

[lib]
name = "samurai"
path = "src/lib.rs"
test = true

[[bin]]
name = "node_test_0"
path = "src/node_test_0.rs"