[package]
name = "samurai"
version = "0.1.5"
authors = ["solanav"]
edition = "2018"
readme = "README.md"
keywords = ["p2p", "samurai", "kademlia"]
license-file = "LICENSE"
repository = "https://github.com/solanav/samurai"
description = """
Very early stage user-space P2P network protocol.
"""
exclude = [
    "mininet/",
    "doc/*",
]

[dependencies]
rand = "0.7.3" # For non-crypto random functions
igd = "0.9.1" # UPnP / Nat traversal utils
serde = { version = "1.0", features = ["derive"] } # Saving and loading peer lists from files
serde_json = "1.0" # Saving and loading peer lists from files
config = "0.10.1" # Config parsing

[lib]
name = "samurai"
path = "src/lib.rs"
test = true

[[bin]]
name = "samurai_node"
path = "src/samurai_node.rs"